--- a/kewo_addons/views/menuitem.xml
+++ b/kewo_addons/views/menuitem.xml
@@ -29,12 +29,16 @@
 
         <menuitem name="面试评价单" id="kewo_mianshi_menuitem" parent="kewo_shenqing_menu_root" action="cowork_ms.action_hire_check"/>
 
+        <menuitem name="产品申请单" id="kewo_product_menuitem" parent="kewo_shenqing_menu_root" action="cowork_ms.action_einfo_approval"/>
+
         <!-- <menuitem name="费用报销" id="hrexpense_menuitem" parent="kewo_shenpi_menu_root" action="hr_expense.hr_expense_actions_my_unsubmitted"/> -->
         <menuitem name="报销申请" id="hrexpense_menuitem_remibursement" parent="kewo_shenpi_menu_root" action="cowork_ms.action_reimbursement_appoval"/>
 
         <menuitem name="审批类型" id="approval_type_menuitem" parent="kewo_shenpi_menu_root"/>
         <menuitem name="请假类型" id="kewo_qiangjia_type_menuitem" parent="approval_type_menuitem" action="cowork_ms.action_duty_type"/>
         <menuitem name="加班类型" id="kewo_jiaban_type_menuitem" parent="approval_type_menuitem" action="cowork_ms.action_overtime_type"/>
+        <menuitem name="部门" id="kewo_department_info_menuitem" parent="approval_type_menuitem" action="cowork_ms.action_department_info"/>
+        <menuitem name="厂牌" id="kewo_factory_info_menuitem" parent="approval_type_menuitem" action="cowork_ms.action_factory_info"/>
         <!-- <menuitem name="销售" id="kewosale_menu_root"/> -->
         <!-- <menuitem name="销售合同审批" id="kewosale_contract_menuitem" parent="kewosale_menu_root" action="kewo_sale_action_window"/>
 
