--- a/cowork_ms/views/menu.xml
+++ b/cowork_ms/views/menu.xml
@@ -13,5 +13,6 @@
     <menuitem id="menu_appoval_type" name="配置" parent="menu_cowork_ms_root" />
     <menuitem id="menu_overtime_type" name="加班类型" parent="menu_appoval_type" action="action_overtime_type"  groups="einfo_hsp_approval.access_einfo_hsp_approval_manager"/>
     <menuitem id="menu_duty_type" name="请假类型" parent="menu_appoval_type" action="action_duty_type" groups="einfo_hsp_approval.access_einfo_hsp_approval_manager"/>
-
+    <menuitem id="menu_department_info" name="部门" parent="menu_appoval_type" action="action_department_info"/>
+    <menuitem id="menu_factory_info" name="厂牌" parent="cowork_ms.menu_appoval_type" action="action_factory_info"/>
 </odoo>
