--- a/cowork_ms/views/product_appoval.xml
+++ b/cowork_ms/views/product_appoval.xml
@@ -33,7 +33,7 @@
                             </div>
                       </group>
                       <group>
-                        <field name="search_product" widget="search_product_info"/>
+                        <field name="search_product" widget="search_product_info" readonly="1"/>
                       </group>
                       <!-- <group>
                         <field name="other_element">
