--- a/cowork_projecty_sales/views/menu.xml
+++ b/cowork_projecty_sales/views/menu.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <menuitem id="menu_cowork_projecty_sales_root" name="柯沃项目式销售" web_icon="cowork_projecty_sales,static/description/cowork.png"/>
-    <menuitem id="menu_cowork_project_availability_analysis" name="项目可行性分析" parent="menu_cowork_projecty_sales_root" action="action_cowork_project_availability_analysis"/>
-    <menuitem id="menu_cowork_technical_analysis" name="技术性分析" parent="menu_cowork_projecty_sales_root" action="action_cowork_technical_analysis"/>
-    <menuitem name="产品申请单" id="kewo_product_menuitem_1" parent="menu_cowork_projecty_sales_root" action="cowork_ms.action_einfo_approval"/>
+    <menuitem id="menu_cowork_projecty_sales_root" name="柯沃项目式销售" web_icon="cowork_projecty_sales,static/description/cowork.png" sequence="1"/>
+    <menuitem id="menu_cowork_project_availability_analysis" name="项目可行性分析" parent="menu_cowork_projecty_sales_root" action="action_cowork_project_availability_analysis" sequence="1"/>
+    <menuitem id="menu_cowork_technical_analysis" name="技术性分析" parent="menu_cowork_projecty_sales_root" action="action_cowork_technical_analysis" sequence="2"/>
+    <menuitem name="产品申请单" id="kewo_product_menuitem_1" parent="menu_cowork_projecty_sales_root" action="cowork_ms.action_einfo_approval" sequence="3"/>
 
-    <menuitem id="menu_cowork_projecty_sales_config" name="设置" parent="menu_cowork_projecty_sales_root"/>
+    <menuitem id="menu_cowork_projecty_sales_config" name="设置" parent="menu_cowork_projecty_sales_root" sequence="4"/>
     <menuitem id="menu_cowork_project_difficulty" name="项目难度" parent="menu_cowork_projecty_sales_config" action="action_cowork_project_difficulty"/>
     <menuitem id="menu_cowork_project_priority" name="项目优先级" parent="menu_cowork_projecty_sales_config" action="action_cowork_project_priority"/>
 </odoo>
