--- a/cowork_projecty_sales/views/cowork_technical_analysis.xml
+++ b/cowork_projecty_sales/views/cowork_technical_analysis.xml
@@ -15,10 +15,10 @@
                 </header>
 				<sheet>
 					<div class="oe_button_box" name="button_box">
-						<button name="action_approval_pro" type="object" class="oe_stat_button" icon="fa-clone" attrs="{'invisible': [('sale_no', '=', 0)]}">
+						<button name="action_approval_pro" type="object" class="oe_stat_button" icon="fa-clone" attrs="{'invisible': [('approval_pro_count', '=', 0)]}">
 							<div class="o_form_field o_stat_info">
 								<span class="o_stat_value">
-									<field name="sale_no" string="申请产品数"/>
+									<field name="approval_pro_count" string="申请产品数"/>
 								</span>
 								<span class="o_stat_text">申请产品数</span>
 							</div>
