--- a/cowork_ms/views/bom_approval.xml
+++ b/cowork_ms/views/bom_approval.xml
@@ -11,17 +11,17 @@
                         <div class="oe_button_box" name="button_box">
                         </div>
                         <group>
-                            <field name="name"/>
-                            <field name="product_tmpl_id"/>
-                            <field name="product_qty"/>
-
-                            <field name="ready_to_produce"/>
-                            <field name="type"/>
+                            <field name="name" attrs="{'readonly': [('approval_state', '!=', 'draft')]}"/>
+                            <field name="product_tmpl_id" attrs="{'readonly': [('approval_state', '!=', 'draft')]}"/>
+                            <field name="product_qty" attrs="{'readonly': [('approval_state', '!=', 'draft')]}"/>
+                            <field name="ready_to_produce" attrs="{'readonly': [('approval_state', '!=', 'draft')]}"/>
+                            <field name="type" attrs="{'readonly': [('approval_state', '!=', 'draft')]}"/>
+                            <field name="bom_id" readonly='1'/>
                         </group>
                         <group>
-                            <field name="bom_line_ids">
+                            <field name="bom_line_ids" attrs="{'readonly': [('approval_state', '!=', 'draft')]}">
                                 <tree editable="bottom">
-                                    <field name="product_tmpl_id"/>
+                                    <field name="product_id"/>
                                     <field name="product_qty"/>
                                 </tree>
                             </field>
