--- a/cowork_ms/views/bom_approval.xml
+++ b/cowork_ms/views/bom_approval.xml
@@ -13,6 +13,7 @@
                         <group>
                             <field name="approval_state" invisible="1"/>
                             <field name="name" attrs="{'readonly': [('approval_state', '!=', 'draft')]}"/>
+                            <field name="start_approval_employee_id" attrs="{'readonly': [('approval_state', '!=', 'draft')]}"/>
                             <field name="product_tmpl_id" attrs="{'readonly': [('approval_state', '!=', 'draft')]}"/>
                             <field name="product_qty" attrs="{'readonly': [('approval_state', '!=', 'draft')]}"/>
                             <field name="ready_to_produce" attrs="{'readonly': [('approval_state', '!=', 'draft')]}"/>
