--- a/cowork_projecty_sales/views/cowork_technical_analysis.xml
+++ b/cowork_projecty_sales/views/cowork_technical_analysis.xml
@@ -24,14 +24,14 @@
 								<span class="o_stat_text">申请产品数</span>
 							</div>
 						</button>
-						<!-- <button name="action_approval_bom" type="object" class="oe_stat_button" icon="fa-file-o" attrs="{'invisible': [('approval_bom_count', '=', 0)]}">
+						<button name="action_approval_bom" type="object" class="oe_stat_button" icon="fa-file-o" attrs="{'invisible': [('approval_bom_count', '=', 0)]}">
 							<div class="o_form_field o_stat_info">
 								<span class="o_stat_value">
 									<field name="approval_bom_count" string="申请BOM表数"/>
 								</span>
 								<span class="o_stat_text">申请BOM表数</span>
 							</div>
-						</button> -->
+						</button>
 					</div>
 					<h1>
 						<field name="name" readonly="1"/>
