--- a/cowork_projecty_sales/views/menu.xml
+++ b/cowork_projecty_sales/views/menu.xml
@@ -4,7 +4,7 @@
     <menuitem id="menu_cowork_project_availability_analysis" name="项目可行性分析" parent="menu_cowork_projecty_sales_root" action="action_cowork_project_availability_analysis" sequence="1"/>
     <menuitem id="menu_cowork_technical_analysis" name="技术性分析" parent="menu_cowork_projecty_sales_root" action="action_cowork_technical_analysis" sequence="2"/>
     <menuitem name="申请单" id="kewo_apply_menuitem" parent="menu_cowork_projecty_sales_root" sequence="3"/>
-        <menuitem name="产品申请单" id="kewo_product_menuitem_1" parent="kewo_apply_menuitem" action="cowork_ms.action_einfo_approval" />
+        <menuitem name="物料申请单" id="kewo_product_menuitem_1" parent="kewo_apply_menuitem" action="cowork_ms.action_einfo_approval" />
         <menuitem name="BOM申请单" id="kewo_bom_menuitem_1" parent="kewo_apply_menuitem" action="cowork_ms.action_bom_appoval" />
 
     <menuitem id="menu_cowork_projecty_sales_config" name="设置" parent="menu_cowork_projecty_sales_root" sequence="4"/>
