--- a/cowork_ms/views/product_appoval.xml
+++ b/cowork_ms/views/product_appoval.xml
@@ -22,7 +22,7 @@
                             <field name="product_code" readonly='1'/>
                             <field name="product_id" readonly='1'/>
                             <!-- <field name="product_code_template_widget" widget="code_generate_widget"/> -->
-                            <field name="department" attrs="{'readonly': [('approval_state', '!=', 'draft')]}"/>
+                            <!-- <field name="department" attrs="{'readonly': [('approval_state', '!=', 'draft')]}"/> -->
                             <field name="department_id" attrs="{'readonly': [('approval_state', '!=', 'draft')]}"/>
                             <field name="categ_id" attrs="{'readonly': [('approval_state', '!=', 'draft')]}"/>
                             <field name="factory_id" attrs="{'readonly': [('approval_state', '!=', 'draft')]}"/>
@@ -84,7 +84,7 @@
         <field name="inherit_id" ref="product.product_template_only_form_view" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='barcode']" position="after">
-                <field name="department"/>
+                <!-- <field name="department"/> -->
                 <field name="department_id"/>
                 <field name="factory_id"/>
             </xpath>
