--- a/cowork_ms/views/product_appoval.xml
+++ b/cowork_ms/views/product_appoval.xml
@@ -150,4 +150,25 @@
         <field name="view_mode">tree,form</field>
     </record>
     <!-- <menuitem id="menu_factory_info" name="厂牌" parent="cowork_ms.menu_appoval_type" action="action_factory_info"/> -->
+
+    <record model="ir.ui.view" id="product_template_cowork_tree_view">
+		<field name="name">product.template.cowork.tree</field>
+		<field name="model">product.template</field>
+		<field name="inherit_id" ref="product.product_template_tree_view"/>
+		<field name="arch" type="xml">
+			<field name="default_code" position="after">
+				<field name="department_id"/>
+				<field name="factory_id"/>
+			</field>
+		</field>
+	</record>
+	<record id="product_template_action_cowork" model="ir.actions.act_window">
+		<field name="name">物料</field>
+		<field name="res_model">product.template</field>
+		<!-- <field name="view_type">form</field> -->
+		<field name="search_view_id" ref="product_template_cowork_tree_view"/>
+		<field name="view_mode">tree</field>
+		<field name="context">{'default_type': 'product'}</field>
+		<!-- "search_default_consumable": 1,  -->
+	</record>
 </odoo>
