--- a/cowork_projecty_sales/views/order.xml
+++ b/cowork_projecty_sales/views/order.xml
@@ -1,3 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <record model="ir.ui.view" id="slae_order_inherit_cowork_form">
+        <field name="name">sale order inherit cowork</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='partner_invoice_id']" position="after">
+                <field name="analysis_id" />
+            </xpath>
+    </record>
+
+    <record model="ir.ui.view" id="purchase_order_inherit_cowork_form">
+        <field name="name">purchase order inherit cowork</field>
+        <field name="model">purchase.order</field>
+        <field name="inherit_id" ref="	purchase.purchase_order_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='partner_ref']" position="after">
+                <field name="analysis_id" />
+            </xpath>
+    </record>
 </odoo>
