--- a/cowork_projecty_sales/views/order.xml
+++ b/cowork_projecty_sales/views/order.xml
@@ -8,6 +8,7 @@
             <xpath expr="//field[@name='partner_invoice_id']" position="after">
                 <field name="analysis_id" />
             </xpath>
+        </field>
     </record>
 
     <record model="ir.ui.view" id="purchase_order_inherit_cowork_form">
@@ -18,5 +19,6 @@
             <xpath expr="//field[@name='partner_ref']" position="after">
                 <field name="analysis_id" />
             </xpath>
+        </field>
     </record>
 </odoo>
