--- a/cowork_projecty_sales/views/order.xml
+++ b/cowork_projecty_sales/views/order.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='partner_invoice_id']" position="after">
-                <field name="analysis_id" />
+                <field name="analysis_id" option="{'no_create_edit': True}"/>
             </xpath>
         </field>
     </record>
@@ -16,7 +16,7 @@
         <field name="inherit_id" ref="purchase.purchase_order_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='partner_ref']" position="after">
-                <field name="analysis_id" />
+                <field name="analysis_id" option="{'no_create_edit': True}"/>
             </xpath>
         </field>
     </record>
