--- a/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
+++ b/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
@@ -79,14 +79,14 @@
                             <field name="count"/>
                             <button string="实体销售" name="%(action_create_sale_order_new)d" type="action" class="oe_highlight"
                             attrs="{'invisible': [('scheme_state', '!=', 'done')]}"
-                            context="{'search_default_partner_id': partner_id,
+                            context="{
                                     'default_partner_id': partner_id,
                                     'default_origin': name，
                                     'default_analysis_id':self.id
                                     }"/>
                             <button string="物料采购" name="%(action_create_purchase_order_new)d" type="action" class="oe_highlight"
                             attrs="{'invisible': [('scheme_state', '!=', 'done')]}"
-                            context="{'search_default_partner_id': partner_id,
+                            context="{
                                     'default_partner_id': partner_id,
                                     'default_origin': name，
                                     'default_analysis_id':self.id
