--- a/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
+++ b/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
@@ -82,14 +82,14 @@
                             context="{
                                     'default_partner_id': partner_id,
                                     'default_origin': name，
-                                    'default_analysis_id':self.id
+                                    'default_analysis_id':active_id
                                     }"/>
                             <button string="物料采购" name="%(action_create_purchase_order_new)d" type="action" class="oe_highlight"
                             attrs="{'invisible': [('scheme_state', '!=', 'done')]}"
                             context="{
                                     'default_partner_id': partner_id,
                                     'default_origin': name，
-                                    'default_analysis_id':self.id
+                                    'default_analysis_id':active_id
                                     }"/>
                         </group>
                     </group>
