--- a/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
+++ b/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
@@ -77,16 +77,12 @@
                             <field name="project_name"/>
                             <field name="budget_amount" widget="monetary"/>
                             <field name="count"/>
-                            <button string="实体销售" name="%(action_create_sale_order_new)d" type="action" class="oe_highlight"
+                            <button string="实体销售" name="action_create_sale_order_new" type="action" class="oe_highlight"
                             attrs="{'invisible': [('scheme_state', '!=', 'done')]}"
-                            context="{
-                                    'default_partner_id': partner_id
-                                    }"/>
-                            <button string="物料采购" name="%(action_create_purchase_order_new)d" type="action" class="oe_highlight"
+                            />
+                            <button string="物料采购" name="action_create_purchase_order_new" type="action" class="oe_highlight"
                             attrs="{'invisible': [('scheme_state', '!=', 'done')]}"
-                            context="{
-                                    'default_partner_id': partner_id
-                                    }"/>
+                            />
                         </group>
                     </group>
                     <notebook>
