--- a/cowork_ms/views/product_appoval.xml
+++ b/cowork_ms/views/product_appoval.xml
@@ -21,7 +21,7 @@
                             </div>
                             <field name="product_code" readonly='1'/>
                             <field name="product_id" readonly='1'/>
-                            <field name="product_code_template_widget" widget="code_generate_widget"/>
+                            <!-- <field name="product_code_template_widget" widget="code_generate_widget"/> -->
                             <!-- <field name="department_id" attrs="{'readonly': [('approval_state', '!=', 'draft')]}"/>
                             <field name="categ_id" attrs="{'readonly': [('approval_state', '!=', 'draft')]}"/>
                             <field name="factory_id" attrs="{'readonly': [('approval_state', '!=', 'draft')]}"/>
