--- a/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
+++ b/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
@@ -79,7 +79,7 @@
                         <group>
                             <field name="ptype" widget="radio" options="{'horizontal': true}"/>
                             <field name="approval_pro"/>
-                            <field name="product_id"/>
+                            <!-- <field name="product_id"/> -->
                         </group>
                     </group>
                     <group string="客户信息">
