--- a/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
+++ b/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
@@ -32,6 +32,8 @@
                     <button type="object" class="oe_highlight" string="方案通过" name="sch2done" groups="cowork_projecty_sales.access_group_ceo_in_cowork_projecty_sales" attrs="{'invisible':[('scheme_state','!=','confirm')]}"/>
                     <button type="object" class="oe_highlight" string="方案不通过" name="sch2cancel" groups="cowork_projecty_sales.access_group_ceo_in_cowork_projecty_sales" attrs="{'invisible':[('scheme_state','!=','confirm')]}"/>
                     
+                    <button type="object" class="oe_highlight" string="成品申请" name="approval_finished_product" attrs="{'invisible':[('scheme_state','!=','draft')]}"/>
+
                     <button string="实体销售" name="%(action_create_sale_order_new)d" type="action" class="oe_highlight"
                     attrs="{'invisible': [('scheme_state', '!=', 'done')]}"
                     context="{
@@ -79,7 +81,7 @@
                         <group>
                             <field name="ptype" widget="radio" options="{'horizontal': true}"/>
                             <field name="approval_pro"/>
-                            <!-- <field name="product_id"/> -->
+                            <field name="product_id"/>
                         </group>
                     </group>
                     <group string="客户信息">
