--- a/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
+++ b/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
@@ -68,6 +68,7 @@
 								<span class="o_stat_text">采购订单</span>
 							</div>
 						</button>
+                        <button type="object" class="oe_stat_button" icon="fa-gear" string="成品分析单" name="action_to_product_approval"/>
                         <button type="object" class="oe_stat_button" icon="fa-gear" string="技术性分析" name="tc_ids"/>
                     </div>
                     <h1>
