--- a/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
+++ b/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
@@ -81,7 +81,7 @@
                         </group>
                         <group>
                             <field name="ptype" widget="radio" options="{'horizontal': true}"/>
-                            <field name="approval_pro"/>
+                            <!-- <field name="approval_pro"/> -->
                             <field name="product_id"/>
                         </group>
                     </group>
