更改技术参数

--- a/cowork_projecty_sales/views/cowork_technical_analysis.xml
+++ b/cowork_projecty_sales/views/cowork_technical_analysis.xml
@@ -56,29 +56,15 @@
 					</group>
 					<group string="技术参数">
 						<notebook>
+							<page>
 							<field name="technical_id">
 								<tree editable="bottom">
-									<field name="efficiency_beat"/>
-									<field name="robot_model_id"/>
-									<field name="robot_count"/>
-									<field name="plc_controller"/>
-									<field name="plc_controller_count"/>
-									<field name="module"/>
-									<field name="module_count"/>
-									<field name="sensor"/>
-									<field name="sensor_count"/>
-									<field name="cylinder"/>
-									<field name="cylinder_count"/>
-									<field name="fixture"/>
-									<field name="fixture_count"/>
-									<field name="motor"/>
-									<field name="motor_count"/>
-									<field name="ccd_vision"/>
-									<field name="ccd_vision_count"/>
-									<field name="pneumatic_components"/>
-									<field name="pneumatic_components_count"/>
+									<field name="type"/>
+									<field name="product_id"/>
+									<field name="count"/>
 								</tree>
 							</field>
+							</page>
 						</notebook>
 						<!-- <group>
 							<label for="efficiency_beat"/>
