--- a/cowork_projecty_sales/views/cowork_technical_analysis.xml
+++ b/cowork_projecty_sales/views/cowork_technical_analysis.xml
@@ -59,7 +59,7 @@
 							<page>
 							<field name="technical_id">
 								<tree editable="bottom">
-									<!-- <field name="type"/> -->
+									<field name="type"/>
 									<field name="product_id"/>
 									<field name="count"/>
 								</tree>
