--- a/cowork_projecty_sales/views/cowork_technical_analysis.xml
+++ b/cowork_projecty_sales/views/cowork_technical_analysis.xml
@@ -54,29 +54,16 @@
 							<field name="if_proof_on_site"/>
 						</group>
 					</group>
-					<notebook>
-						<page string="技术参数">
-							<field name="technical_id">
-								<tree editable="bottom">
-									<field name="type"/>
-									<field name="product_id"/>
-									<field name="count"/>
-								</tree>
-							</field>
-						</page>
-					</notebook>
+					<group>
+						<field name="technical_id">
+							<tree editable="bottom">
+								<field name="type"/>
+								<field name="product_id"/>
+								<field name="count"/>
+							</tree>
+						</field>
+					</group>
 					<!-- <group string="技术参数"> -->
-						<!-- <notebook>
-							<page>
-							<field name="technical_id">
-								<tree editable="bottom">
-									<field name="type"/>
-									<field name="product_id"/>
-									<field name="count"/>
-								</tree>
-							</field>
-							</page>
-						</notebook> -->
 						<!-- <group>
 							<label for="efficiency_beat"/>
 							<div class="o_row">
